[project]
name = "project-onXP"
version = "0.1.0"
description = "Project-OnXP"
authors = [
    {name = "kyomel", email = "michaellapandio04@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
